@@ -74,7 +74,7 @@ NEW FEATURES
         instead of needing :
             DT[,sum(v),by=list(a%%2L)]
             DT[,sum(v),by=list(month(date))]
-            
+
     o   Unnamed 'by' expressions have always been inspected using all.vars() to make
         a guess at a sensible column name for the result. This guess now includes
         function names via all.vars(functions=TRUE), for convenience; e.g.,
@@ -82,6 +82,11 @@ NEW FEATURES
         now returns a column called 'month' rather than 'date'. It is more robust to
         explicitly name columns, though; e.g.,
             DT[,sum(v),by=list("Guaranteed name"=month(date))]
+
+    o   For a surprising speed boost in some circumstances, default options such as
+        'datatable.verbose' are now set when the package loads (unless they are already
+        set, by user's profile for example). The 'default' argument of base::getOption()
+        was the culprit and has been removed internally from all 11 calls.
 
 
 BUG FIXES
